--- a/css/global.css
+++ b/css/global.css
@@ -9,6 +9,10 @@
 
 :root {
     font-size: 10px;
+
+    --color-links: #171717;
+    --color-hover: #dcdcdc8a;
+    --color-profile: #e8e878;
 }
 
 body {
